tests/idris2/coverage/coverage026/expected
1/1: Building Issue1022-Generated (Issue1022-Generated.idr)
Error: test10 is not covering.

Issue1022-Generated:34:1--34:26
 30 |
 31 | test9 : Not (MyEq a 'a')
 32 | test9 Impossible impossible
 33 |
 34 | test10 : Not (MyEq a Nat)
      ^^^^^^^^^^^^^^^^^^^^^^^^^

Missing cases:
    test10 Refl

Error: test11 is not covering.

Issue1022-Generated:37:1--37:24
 33 |
 34 | test10 : Not (MyEq a Nat)
 35 | test10 Impossible impossible
 36 |
 37 | test11 : Not (MyEq 3 a)
      ^^^^^^^^^^^^^^^^^^^^^^^

Missing cases:
    test11 Refl

Error: test8 is not covering.

Issue1022-Generated:28:1--28:26
 24 | test7 Impossible impossible
 25 |
 26 | -- The following ones are actually possible
 27 |
 28 | test8 : Not (MyEq a Type)
      ^^^^^^^^^^^^^^^^^^^^^^^^^

Missing cases:
    test8 Refl

Error: test9 is not covering.

Issue1022-Generated:31:1--31:25
 27 |
 28 | test8 : Not (MyEq a Type)
 29 | test8 Impossible impossible
 30 |
 31 | test9 : Not (MyEq a 'a')
      ^^^^^^^^^^^^^^^^^^^^^^^^

Missing cases:
    test9 Refl

